# Algea

./: # Default Runtime Sleeve Weakness Audit.txt  .gitignore  .julesrules  ACCESSIBILITY.md  ARCHITECTURE.md  CLAUDE.md  CODEBASE_WALKTHROUGH.md  CONTROL_ROOM_README.md  Codebase Review  DEEP_DIVE_VALIDATION.md  Default Runtime Sleeve Weakness Audit Review.txt  MIGRATION_AUDIT.md  Makefile  README.md  RUNBOOK.md  RUNBOOK_THREE_SLEEVES.md  SYSTEM_ANALYSIS_PART2.md  SYSTEM_ANALYSIS_PART3.md  SYSTEM_ANALYSIS_PART4.md  SYSTEM_INTEGRATION_WORKFLOWS.md  SYSTEM_VISUAL_DIAGRAMS.md  WORKFLOW.md  _postfix_metrics.py  _tmp_chronos2_validate.txt  algaectl.py  all_tests.txt  cleanup_migration.bat  count_universe.py  databento_sample.csv  databento_schema.json  debug.txt  debug_universe.txt  finish_phase3.bat  full_regression.txt  launch_algae.bat  launch_algae.ps1  overnight_training_plan.md  pack_test_out.txt  phase2_tests.txt  pyproject.toml  (+11 more)
.agent/workflows/: cooc-eval-protocol.md
Algaie Info and Docs/Claude/: ARCHITECTURE.md  SYSTEM_ANALYSIS.md
algae/: __init__.py
algae/core/: contracts.py  device.py
algae/data/: __init__.py  common.py
algae/eval/: selector_metrics.py  vrp_report.py
algae/execution/: equity_strategy.py  options_strategy.py  shadow_runner.py
algae/portfolio/: __init__.py  vol_scaling.py
algae/research/: __init__.py  backtest_engine.py  metrics.py  trade_log.py
algae/trading/: broker_alpaca.py  broker_base.py  broker_ibkr.py  derivatives_risk.py  entry_filter.py  fills.py  ibkr_client.py  meta_allocator.py  paper_guards_futures.py  portfolio.py  reconciliation.py  risk.py
algae/training/: __init__.py  dataloaders.py  env_statarb.py  foundation_train.py  ranker_train.py  selector_dataset.py  selector_train.py  train_chronos2_lora.py  train_itransformer.py  (+2 more)
algaie_legacy/: __init__.py
backend/: RUNBOOK_PIPELINE.md  requirements.txt  run_server.py  telemetry.db
data_cache/: canonical_futures_daily.parquet
deploy/: README_DEPLOY.md  algaie_inference.service  crontab.conf
docs/: contracts.md  cooc_reversal_futures.md  feature-flags.md  frontend_architecture_ux_ui_analysis.md  frontend_execution_contract.md  frontend_redesign_implementation_plan.md  frontend_runtime_validation_procedure.md  full_repo_technical_audit_2026-02-24.md  infrastructure_migration_blueprint.md  migration_map.md  ml_platform_config.md  ops-troubleshooting.md  options_vrp_sleeve.md  pipeline_overview.md  pr1_post_pr_verification_audit.md  release-plan.md  runtime_execution_report.md  sleeve_orchestration_runtime_review.md  sse.md  troubleshooting.md  ui-architecture.md
frontend/: .env.local  ACCESSIBILITY.md  index.html  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
info_docs_temp/: package-lock.json  package.json  print_pdf_puppeteer.js
logs/: algaie.log.2026-03-01  algaie.log.2026-03-02  algaie.log.2026-03-03  algaie.log.2026-03-04  algaie.log.2026-03-05
native_frontend/: CMakeLists.txt  vcpkg.json
native_frontend/schemas/: control.proto  portfolio.proto  telemetry.proto
native_frontend/scripts/: Launch_Algae.ps1  Sign_Algae.ps1  deploy_native_frontend.ps1
native_frontend/src/: main.cpp
native_frontend/src/config/: BuildEnvironment.h  build_config.h.in
native_frontend/src/engine/: AlertDag.cpp  AlertDag.h  GlobalStore.cpp  GlobalStore.h  Logger.h  StateReconciler.cpp  StateReconciler.h  UiSynchronizer.cpp  UiSynchronizer.h  ZmqReceiver.cpp  ZmqReceiver.h
native_frontend/src/hardware/: FidoGateway.cpp  FidoGateway.h  KillSwitch.cpp  KillSwitch.h  KillSwitchBridge.cpp  KillSwitchBridge.h
native_frontend/src/models/: ArrowBuilderWorker.cpp  ArrowBuilderWorker.h  ArrowTableModel.cpp  ArrowTableModel.h  BoundedArrowPool.h  JobTableModel.cpp  JobTableModel.h
native_frontend/src/network/: RestClient.cpp  RestClient.h
native_frontend/src/qml/: main.qml  main_full.qml.bak  qml.qrc
native_frontend/src/qml/components/: ActionQueuePanel.qml  AlertRail.qml  DataAgeChip.qml  DetailDrawer.qml  GuardrailMatrix.qml  MetricCard.qml  OperatorTable.qml  PanelScaffold.qml  PositionsTable.qml  SectionHeader.qml  SeverityBanner.qml  SleeveStatusRow.qml  StatusBadge.qml  Theme.qml
native_frontend/src/qml/views/: AllocationTab.qml  CommandCenterTab.qml  JobsTab.qml  LabTab.qml  OverviewTab.qml  PortfolioTab.qml  RiskTab.qml  SettingsTab.qml  SignalsTab.qml
native_frontend/src/rendering/: FanChartItem.cpp  FanChartItem.h  ParallelCoordinatesItem.cpp  ParallelCoordinatesItem.h  SankeyDiagramItem.cpp  SankeyDiagramItem.h  VulkanChartItem.cpp  VulkanChartItem.h
native_frontend/src/vulkan/shaders/: fan_chart.frag  fan_chart.vert
native_frontend/src/windowing/: WorkspaceManager.cpp  WorkspaceManager.h
native_frontend/tests/: test_alert_dag.cpp  test_arrow_model.cpp  test_killswitch_latency.cpp  test_ring_buffer.cpp
ops/: algae_sunset.conf  emergency_rollback.sh  eod_reconcile.py  log_forwarder.ps1  teardown_legacy.sh  upload_symbols.ps1
runs/: contract_spec_check_report.json
scripts/: ALGAE_DASHBOARD.bat  ALGAIE_DASHBOARD.bat  ALGEA_DASHBOARD.bat  alpaca_data_expansion.py  analyze_shadow_ledger.py  autostart_trading.ps1  boot_tws.bat  build_backend_exe.ps1  create_shortcut.ps1  equity_pipeline.py  extract_chronos2_gaps.py  extract_multi_asset_gaps.py  extract_tft_training_data.py  fetch_60min_etfs.py  frontend_runtime_truth_check.py  generate_synthetic_vrp.py  ib_preflight.py  install_ibc.ps1  intraday_tick_hidden.bat  launch_algaie.ps1  register_scheduled_task.ps1  run_orchestrator_cycle.py  run_three_sleeves_ibkr.py  setup_scheduled_task.ps1  start_trading.ps1  statarb_v3_pipeline.py  teardown_stack.ps1  test_statarb_neural.py  train_chronos2_lora.py  train_chronos2_optuna.py  train_itransformer_optuna.py  train_rl_macro.py  train_rl_policy.py  train_smoe_experts.py  train_smoe_optuna.py  train_smoe_transfer.py  train_statarb_v3.py  train_tft_gap.py  train_vrp_st_transformer.py  vrp_daily_accumulator.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backend_supervisor.rs  main.rs
(+7066 files in other folders)
